# coming-soon-rss

./: README.md  k8s.yaml  pyproject.toml
src/coming_soon_rss/: __init__.py
