[project]
name = "coming-soon-rss"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coming_soon_rss"]
